# SOFTS_Implementation

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
configs/: experiment_config.yaml  model_config.yaml  temp_eval_data_config.yaml  temp_eval_model_config.yaml  temp_eval_train_config.yaml  test_experiment_config.yaml  train_config.yaml
data/scripts/: download_data.py
docs/: architecture.md
notebooks/: exploration.ipynb
scripts/: evaluate.py  train.py
src/: main.py
src/data_processing/: dataset.py  transforms.py
src/evaluation/: evaluate.py
src/models/: __init__.py  softs_model.py
src/softs_implementation/: main.py
src/softs_implementation/data_processing/: __init__.py  dataset.py
src/softs_implementation/evaluation/: evaluate.py
src/softs_implementation/models/: softs_model.py
src/softs_implementation/scripts/: evaluate.py  train.py
src/softs_implementation/training/: train.py
src/softs_implementation/utils/: __init__.py  helpers.py  metrics.py
src/training/: train.py
tests/integration/: test_training.py
tests/unit/: test_metrics.py  test_softs_model.py  test_transforms.py
